@@ -1,1 +1,0 @@
-rtems/support/libbspExt
