@@ -1,1 +1,0 @@
-:ext:strauman@noric04.slac.stanford.edu:/afs/slac/g/spear/cvsrep
